--- a/rakuten.html
+++ b/rakuten.html
@@ -153,8 +153,8 @@
     }
     .toggle-btn:hover { background: #edf2f7; }
     .toggle-btn.active { background: #fff5f5; border-color: #e53e3e; color: #e53e3e; }
-    .btn-secondary { background: #718096; }
-    .btn-secondary:hover { background: #4a5568; }
+    .btn-secondary { background: #ed8936; }
+    .btn-secondary:hover { background: #dd6b20; }
     .modal-overlay {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background: rgba(0,0,0,0.5); z-index: 2000; justify-content: center; align-items: center;
