--- a/rakuten.html
+++ b/rakuten.html
@@ -153,7 +153,7 @@
     }
     .toggle-btn:hover { background: #edf2f7; }
     .toggle-btn.active { background: #fff5f5; border-color: #e53e3e; color: #e53e3e; }
-    .btn-secondary { background: #ed8936; }
+    .btn-secondary { background: #ed8936; color: #fff; }
     .btn-secondary:hover { background: #dd6b20; }
     .modal-overlay {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
