--- a/rakuten.html
+++ b/rakuten.html
@@ -202,6 +202,7 @@
       <div class="hamburger-menu">
         <button class="hamburger-btn" onclick="toggleMenu()">≡</button>
         <div class="menu-dropdown" id="menuDropdown">
+          <a href="#" onclick="event.preventDefault();navigateTo('index')">🏠 Top</a>
           <a href="#" onclick="event.preventDefault();navigateTo('rakuten')">🛒 楽天</a>
           <a href="#" onclick="event.preventDefault();navigateTo('yahoo')">🛍️ Yahoo</a>
           <a href="#" onclick="event.preventDefault();navigateTo('dshopping')">📱 dショッピング</a>
