--- a/rakuten.html
+++ b/rakuten.html
@@ -702,7 +702,7 @@
         </div>
         <div class="sidebar-buttons">
           <button class="btn btn-primary" id="saveBtn" onclick="saveToSheet()">📝 記録する</button>
-          <button class="btn btn-secondary" onclick="generateTemplate()">📋 テンプレ生成</button>
+          <button class="btn btn-discord" onclick="generateTemplate()">📋 確認して投稿</button>
         </div>
       </div>
     </div><!-- sidebar -->
