--- a/rakuten.html
+++ b/rakuten.html
@@ -9,7 +9,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Hiragino Sans', sans-serif;
-      background: linear-gradient(135deg, #fff5f5 0%, #fed7d7 100%);
+      background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
       min-height: 100vh; padding: 16px; padding-bottom: 100px;
     }
     .page-wrapper { display: flex; gap: 20px; max-width: 1200px; margin: 0 auto; }
@@ -19,102 +19,120 @@
     .hamburger-menu { position: relative; margin-bottom: 8px; }
     .hamburger-btn {
       width: 44px; height: 44px; border-radius: 10px; background: #fff;
-      border: 1px solid #e2e8f0; color: #4a5568; font-size: 24px; cursor: pointer;
+      border: 1px solid #e2e8f0; color: #475569; font-size: 24px; cursor: pointer;
       display: flex; align-items: center; justify-content: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
     }
-    .hamburger-btn:hover { background: #f7fafc; }
+    .hamburger-btn:hover { background: #f8fafc; }
     .menu-dropdown {
       display: none; position: absolute; top: 50px; left: 0; background: #fff;
-      border: 1px solid #e2e8f0; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      border: 1px solid #e2e8f0; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.12);
       min-width: 200px; z-index: 1000; overflow: hidden;
     }
     .menu-dropdown.show { display: block; }
     .menu-dropdown a {
-      display: block; padding: 12px 16px; color: #2d3748; text-decoration: none;
-      font-size: 14px; border-bottom: 1px solid #f0f0f0;
+      display: block; padding: 12px 16px; color: #1e293b; text-decoration: none;
+      font-size: 14px; border-bottom: 1px solid #f1f5f9;
     }
     .menu-dropdown a:last-child { border-bottom: none; }
-    .menu-dropdown a:hover { background: #f7fafc; }
-    .header { display: flex; align-items: center; gap: 12px; margin-bottom: 20px; padding: 8px 0; }
+    .menu-dropdown a:hover { background: #f8fafc; }
+    .header { 
+      display: flex; align-items: center; gap: 12px; margin-bottom: 20px; padding: 16px 20px;
+      background: #fff; border-radius: 16px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+    }
     .back-btn {
-      width: 40px; height: 40px; border-radius: 10px; background: #fff;
-      border: 1px solid #e2e8f0; color: #4a5568; font-size: 20px; cursor: pointer;
+      width: 40px; height: 40px; border-radius: 10px; background: #f8fafc;
+      border: 1px solid #e2e8f0; color: #475569; font-size: 20px; cursor: pointer;
       display: flex; align-items: center; justify-content: center;
     }
-    .back-btn:hover { background: #f7fafc; }
-    .header-title { display: flex; align-items: center; gap: 8px; }
+    .back-btn:hover { background: #f1f5f9; }
+    .header-title { display: flex; align-items: center; gap: 12px; }
     .header-icon {
-      width: 36px; height: 36px; background: linear-gradient(135deg, #e53e3e 0%, #c53030 100%);
-      border-radius: 8px; display: flex; align-items: center; justify-content: center; font-size: 18px;
+      width: 44px; height: 44px; background: linear-gradient(135deg, #bf0000, #e60012);
+      border-radius: 12px; display: flex; align-items: center; justify-content: center;
+      font-size: 20px; font-weight: 800; color: #fff;
     }
-    .header h1 { color: #2d3748; font-size: 20px; font-weight: 600; }
+    .header h1 { color: #1e293b; font-size: 22px; font-weight: 700; }
     .section {
-      background: #fff; border: 1px solid #e2e8f0; border-radius: 16px;
-      padding: 20px; margin-bottom: 16px; box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+      background: #fff; border-radius: 20px;
+      padding: 24px; margin-bottom: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.06);
     }
     .section-title {
-      color: #2d3748; font-size: 14px; font-weight: 600; margin-bottom: 16px;
-      display: flex; align-items: center; gap: 8px;
+      color: #1e293b; font-size: 15px; font-weight: 700; margin-bottom: 18px;
+      display: flex; align-items: center; gap: 10px;
     }
-    .section-title::before { content: ''; width: 4px; height: 16px; background: #e53e3e; border-radius: 2px; }
+    .section-title::before { content: ''; width: 4px; height: 18px; background: linear-gradient(180deg, #bf0000, #e60012); border-radius: 2px; }
     .form-group { margin-bottom: 16px; }
     .form-group:last-child { margin-bottom: 0; }
-    .form-label { display: block; color: #718096; font-size: 13px; margin-bottom: 6px; }
+    .form-label { display: block; color: #64748b; font-size: 13px; font-weight: 500; margin-bottom: 6px; }
     .form-input, .form-select, .form-textarea {
-      width: 100%; padding: 12px 14px; background: #f7fafc;
-      border: 1px solid #e2e8f0; border-radius: 10px; color: #2d3748; font-size: 15px;
+      width: 100%; padding: 12px 14px; background: #f8fafc;
+      border: 2px solid #e2e8f0; border-radius: 10px; color: #1e293b; font-size: 15px;
+      transition: all 0.2s;
     }
     .form-textarea { min-height: 80px; resize: vertical; font-family: inherit; }
     .form-input:focus, .form-select:focus, .form-textarea:focus { outline: none; border-color: #e53e3e; background: #fff; }
-    .form-input::placeholder, .form-textarea::placeholder { color: #a0aec0; }
+    .form-input::placeholder, .form-textarea::placeholder { color: #94a3b8; }
     .form-row { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
     .form-row-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 12px; }
     .form-row-4 { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 12px; }
     .calc-display {
-      background: #f7fafc; border: 1px solid #e2e8f0; border-radius: 10px;
-      padding: 12px 14px; color: #2d3748; font-size: 15px; font-weight: 600;
+      background: #f1f5f9; border: 2px solid #e2e8f0; border-radius: 10px;
+      padding: 12px 14px; color: #1e293b; font-size: 15px; font-weight: 600;
     }
     .campaign-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; }
     .campaign-item.wide { grid-column: span 2; }
     .campaign-item {
       display: flex; flex-wrap: wrap; align-items: center; gap: 10px; padding: 12px;
-      background: #f7fafc; border: 1px solid #e2e8f0; border-radius: 10px; cursor: pointer;
+      background: #f8fafc; border: 2px solid #e2e8f0; border-radius: 12px; cursor: pointer;
+      transition: all 0.2s;
     }
-    .campaign-item:hover { background: #edf2f7; }
-    .campaign-item.active { background: #fff5f5; border-color: #e53e3e; }
+    .campaign-item:hover { background: #f1f5f9; border-color: #cbd5e1; }
+    .campaign-item.active { background: #fef2f2; border-color: #e53e3e; }
     .campaign-checkbox {
-      width: 20px; height: 20px; border-radius: 5px; border: 2px solid #cbd5e0;
+      width: 20px; height: 20px; border-radius: 6px; border: 2px solid #cbd5e1;
       display: flex; align-items: center; justify-content: center; flex-shrink: 0;
+      transition: all 0.2s;
     }
     .campaign-item.active .campaign-checkbox { background: #e53e3e; border-color: #e53e3e; }
     .campaign-checkbox::after { content: '✓'; color: #fff; font-size: 12px; opacity: 0; }
     .campaign-item.active .campaign-checkbox::after { opacity: 1; }
-    .campaign-label { color: #4a5568; font-size: 13px; line-height: 1.3; flex: 1; }
-    .campaign-item.active .campaign-label { color: #2d3748; }
+    .campaign-label { color: #475569; font-size: 13px; line-height: 1.3; flex: 1; }
+    .campaign-item.active .campaign-label { color: #1e293b; font-weight: 500; }
     .campaign-points {
-      width: 100%; margin-top: 4px; font-size: 12px; font-weight: 600; color: #e53e3e;
+      width: 100%; margin-top: 4px; font-size: 12px; font-weight: 600; color: #dc2626;
       display: none;
     }
     .campaign-item.active .campaign-points { display: block; }
     .campaign-select {
-      padding: 4px 8px; font-size: 12px; border-radius: 6px; border: 1px solid #cbd5e0;
+      padding: 4px 8px; font-size: 12px; border-radius: 6px; border: 1px solid #cbd5e1;
       background: #fff; cursor: pointer;
     }
     .campaign-item.has-select { flex-wrap: wrap; }
     .fixed-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; }
     .fixed-item {
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 8px 12px; background: #fff5f5; border: 1px solid #fed7d7; border-radius: 8px;
+      display: flex; flex-direction: column; align-items: center; gap: 4px;
+      padding: 12px 8px; background: #fef2f2; border: 1px solid #fecaca; border-radius: 10px;
     }
-    .fixed-label { color: #2d3748; font-size: 12px; font-weight: 500; }
-    .fixed-rate { color: #718096; font-size: 11px; }
-    .fixed-points { color: #e53e3e; font-size: 12px; font-weight: 600; }
-    .preview-section { background: #f0fff4; border-color: #9ae6b4; }
+    .fixed-label { color: #1e293b; font-size: 12px; font-weight: 600; }
+    .fixed-rate { color: #64748b; font-size: 10px; }
+    .fixed-points { color: #dc2626; font-size: 14px; font-weight: 700; }
+    .preview-section { 
+      background: #fff; 
+      border: 2px solid #10b981;
+    }
+    .preview-section .section-title { color: #059669; }
+    .preview-section .section-title::before { background: linear-gradient(180deg, #10b981, #34d399); }
     .preview-grid { display: flex; flex-direction: column; gap: 12px; }
-    .preview-item { text-align: center; padding: 20px 16px; background: #fff; border-radius: 12px; border: 1px solid #c6f6d5; }
-    .preview-label { color: #718096; font-size: 12px; margin-bottom: 6px; }
-    .preview-value { color: #38a169; font-size: 28px; font-weight: 700; }
-    .preview-value.negative { color: #e53e3e; }
+    .preview-item { 
+      text-align: center; padding: 20px 16px; 
+      background: #f0fdf4; border-radius: 14px; 
+      border: 1px solid #bbf7d0;
+    }
+    .preview-label { color: #64748b; font-size: 12px; margin-bottom: 6px; }
+    .preview-value { color: #059669; font-size: 28px; font-weight: 700; }
+    .preview-value.negative { color: #dc2626; }
     .preview-unit { font-size: 14px; font-weight: 400; }
     .sidebar-buttons { display: flex; flex-direction: column; gap: 10px; margin-top: 16px; }
     .sidebar-buttons .btn { width: 100%; }
@@ -122,41 +140,41 @@
     .btn {
       padding: 16px 24px; border-radius: 12px; font-size: 15px; font-weight: 600;
       border: none; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px;
+      transition: all 0.2s;
     }
-    .btn-primary { background: linear-gradient(135deg, #e53e3e 0%, #c53030 100%); color: #fff; }
-    .btn-primary:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(229,62,62,0.3); }
+    .btn-primary { background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%); color: #fff; }
+    .btn-primary:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(220,38,38,0.4); }
     .btn-primary:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
     .btn-discord { background: linear-gradient(135deg, #5865F2 0%, #4752c4 100%); color: #fff; }
+    .btn-discord:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(88,101,242,0.4); }
     .btn-discord:disabled { opacity: 0.5; cursor: not-allowed; }
     .history-list { display: flex; flex-direction: column; gap: 8px; }
     .history-item {
-      padding: 14px 16px; background: #f7fafc; border: 1px solid #e2e8f0;
-      border-radius: 10px; cursor: pointer;
+      padding: 14px 16px; background: #f8fafc; border: 2px solid #e2e8f0;
+      border-radius: 12px; cursor: pointer; transition: all 0.2s;
     }
-    .history-item:hover { background: #edf2f7; }
-    .history-item.selected { border-color: #e53e3e; background: #fff5f5; }
+    .history-item:hover { background: #f1f5f9; border-color: #cbd5e1; }
+    .history-item.selected { border-color: #e53e3e; background: #fef2f2; }
     .history-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 6px; }
-    .history-date { color: #718096; font-size: 12px; }
-    .history-type { color: #c53030; font-size: 11px; padding: 2px 8px; background: #fff5f5; border-radius: 4px; }
-    .history-product { color: #2d3748; font-size: 14px; font-weight: 500; margin-bottom: 8px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+    .history-date { color: #64748b; font-size: 12px; }
+    .history-type { color: #dc2626; font-size: 11px; padding: 2px 8px; background: #fef2f2; border-radius: 6px; font-weight: 500; }
+    .history-product { color: #1e293b; font-size: 14px; font-weight: 600; margin-bottom: 8px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
     .history-stats { display: flex; gap: 16px; }
     .history-stat { font-size: 12px; }
-    .history-stat-label { color: #718096; }
-    .history-stat-value { color: #38a169; font-weight: 600; }
-    .history-stat-value.negative { color: #e53e3e; }
-    .history-empty { text-align: center; padding: 40px 20px; color: #718096; }
+    .history-stat-label { color: #64748b; }
+    .history-stat-value { color: #10b981; font-weight: 600; }
+    .history-stat-value.negative { color: #ef4444; }
+    .history-empty { text-align: center; padding: 40px 20px; color: #64748b; }
     .toggle-group { display: flex; gap: 8px; }
     .toggle-btn {
       flex: 1; padding: 12px 20px; border: 2px solid #e2e8f0; border-radius: 10px;
-      background: #f7fafc; color: #718096; font-size: 14px; font-weight: 600;
+      background: #f8fafc; color: #64748b; font-size: 14px; font-weight: 600;
       cursor: pointer; transition: all 0.2s;
     }
-    .toggle-btn:hover { background: #edf2f7; }
-    .toggle-btn.active { background: #fff5f5; border-color: #e53e3e; color: #e53e3e; }
-    .btn-secondary { background: #ed8936; color: #fff; }
-    .btn-secondary:hover { background: #dd6b20; }
-    .btn-discord { background: #5865F2; color: #fff; }
-    .btn-discord:hover { background: #4752c4; }
+    .toggle-btn:hover { background: #f1f5f9; }
+    .toggle-btn.active { background: #fef2f2; border-color: #e53e3e; color: #dc2626; }
+    .btn-secondary { background: linear-gradient(135deg, #f97316 0%, #ea580c 100%); color: #fff; }
+    .btn-secondary:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(249,115,22,0.4); }
     .modal-overlay {
       display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background: rgba(0,0,0,0.5); z-index: 2000; justify-content: center; align-items: center;
@@ -205,11 +223,12 @@
     }
     .tab-btn {
       flex: 1; padding: 14px 20px; border: 2px solid #e2e8f0; border-radius: 12px;
-      background: #fff; color: #718096; font-size: 15px; font-weight: 600;
+      background: #fff; color: #64748b; font-size: 15px; font-weight: 600;
       cursor: pointer; transition: all 0.2s;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     }
-    .tab-btn:hover { background: #f7fafc; }
-    .tab-btn.active { background: #e53e3e; border-color: #e53e3e; color: #fff; }
+    .tab-btn:hover { background: #f8fafc; border-color: #cbd5e1; }
+    .tab-btn.active { background: linear-gradient(135deg, #dc2626, #b91c1c); border-color: transparent; color: #fff; box-shadow: 0 4px 12px rgba(220,38,38,0.3); }
     .toast {
       position: fixed; bottom: 100px; left: 50%; transform: translateX(-50%) translateY(100px);
       padding: 14px 24px; background: #fff; border: 1px solid #e2e8f0; border-radius: 10px;
@@ -241,7 +260,7 @@
       <div class="header">
         <button class="back-btn" onclick="goBack()">←</button>
         <div class="header-title">
-          <div class="header-icon">🛒</div>
+          <div class="header-icon">R</div>
         <h1>楽天配信</h1>
       </div>
     </div>
