--- a/rakuten.html
+++ b/rakuten.html
@@ -183,12 +183,14 @@
     }
     .modal-overlay.show { display: flex; }
     .modal-content {
-      background: #fff; border-radius: 16px; width: 90%; max-width: 700px; max-height: 80vh;
+      background: #fff; border-radius: 16px; width: 90%; max-width: 700px; max-height: 85vh;
       display: flex; flex-direction: column; box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+      overflow: hidden;
     }
     .modal-header {
       display: flex; justify-content: space-between; align-items: center;
       padding: 16px 20px; border-bottom: 1px solid #e2e8f0; font-weight: 600; font-size: 16px;
+      flex-shrink: 0;
     }
     .modal-close {
       background: none; border: none; font-size: 24px; cursor: pointer; color: #718096;
@@ -198,16 +200,16 @@
     .modal-textarea {
       flex: 1; margin: 16px; padding: 16px; border: 1px solid #e2e8f0; border-radius: 10px;
       font-family: monospace; font-size: 13px; line-height: 1.6; resize: none;
-      background: #f7fafc; min-height: 400px;
+      background: #f7fafc; min-height: 200px; overflow-y: auto;
     }
-    .modal-buttons { display: flex; gap: 12px; padding: 16px 20px; border-top: 1px solid #e2e8f0; }
+    .modal-buttons { display: flex; gap: 12px; padding: 16px 20px; border-top: 1px solid #e2e8f0; flex-shrink: 0; }
     .modal-buttons .btn { flex: 1; }
     #templatePreviewMode, #templateEditMode {
-      display: flex; flex-direction: column; flex: 1; min-height: 0;
+      display: flex; flex-direction: column; flex: 1; min-height: 0; overflow: hidden;
     }
     .schedule-options {
       display: flex; align-items: center; gap: 20px; padding: 12px 16px;
-      background: #f7fafc; border-top: 1px solid #e2e8f0;
+      background: #f7fafc; border-top: 1px solid #e2e8f0; flex-shrink: 0;
     }
     .schedule-label {
       display: flex; align-items: center; gap: 6px; font-size: 14px; color: #4a5568; cursor: pointer;
