--- a/yahoo.html
+++ b/yahoo.html
@@ -104,6 +104,11 @@
       display: none;
     }
     .campaign-item.active .campaign-points { display: block; }
+    .campaign-select {
+      padding: 4px 8px; font-size: 12px; border-radius: 6px; border: 1px solid #cbd5e1;
+      background: #fff; cursor: pointer;
+    }
+    .campaign-item.has-select { flex-wrap: wrap; }
     .fixed-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; }
     .fixed-item {
       display: flex; flex-direction: column; align-items: center; gap: 4px;
@@ -199,6 +204,28 @@
       background: #6366f1; color: #fff; font-size: 11px; font-weight: 700;
       padding: 2px 8px; border-radius: 10px; min-width: 20px; text-align: center;
     }
+    /* モーダル共通 */
+    .modal-overlay {
+      position: fixed; top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.5); z-index: 100;
+      display: none; align-items: center; justify-content: center;
+    }
+    .modal-overlay.show { display: flex; }
+    .modal-content {
+      background: #fff; border-radius: 16px; width: 90%; max-width: 700px; max-height: 90vh;
+      display: flex; flex-direction: column; box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+      overflow: hidden;
+    }
+    .modal-header {
+      display: flex; justify-content: space-between; align-items: center;
+      padding: 16px 20px; border-bottom: 1px solid #e2e8f0; font-weight: 600; font-size: 16px;
+      flex-shrink: 0;
+    }
+    .modal-close {
+      background: none; border: none; font-size: 24px; cursor: pointer; color: #718096;
+      width: 32px; height: 32px; display: flex; align-items: center; justify-content: center;
+    }
+    .modal-close:hover { color: #e53e3e; }
     /* 予約モーダル */
     .scheduled-modal-content {
       background: #fff; border-radius: 16px; width: 90%; max-width: 500px;
