--- a/rakuten.html
+++ b/rakuten.html
@@ -623,6 +623,14 @@
         <label class="form-label">キャンペーンエントリーリンク</label>
         <input type="url" class="form-input" id="appleCampaignEntryUrl" placeholder="https://event.rakuten.co.jp/...">
       </div>
+      <div class="form-group">
+        <label class="form-label">備考</label>
+        <textarea class="form-textarea" id="appleRemarks" placeholder="特殊な条件やテンプレに差し込む内容があれば記入..." style="min-height:50px;"></textarea>
+      </div>
+    </div>
+    
+    <div class="section">
+      <div class="section-title">金額入力</div>
       <div class="form-row-3">
         <div class="form-group">
           <label class="form-label">定価（税込）</label>
@@ -636,10 +644,6 @@
           <label class="form-label">購入金額（税込）</label>
           <div class="calc-display" id="applePriceWithTaxDisplay">0</div>
         </div>
-      </div>
-      <div class="form-group">
-        <label class="form-label">備考</label>
-        <textarea class="form-textarea" id="appleRemarks" placeholder="特殊な条件やテンプレに差し込む内容があれば記入..." style="min-height:50px;"></textarea>
       </div>
     </div>
     
