--- a/rakuten.html
+++ b/rakuten.html
@@ -865,7 +865,7 @@
           </div>
         </div>
         <div class="modal-buttons">
-          <button class="btn btn-secondary" onclick="copyEditTemplate()">📋 コピー</button>
+          <button class="btn btn-primary" onclick="copyEditTemplate()">📋 コピー</button>
           <button class="btn btn-discord" id="postBtn" onclick="postToDiscord()">🚀 投稿する</button>
         </div>
       </div>
