--- a/top.html
+++ b/top.html
@@ -353,7 +353,7 @@
           <p>EC・ポイ活の配信データを集約シートに統合</p>
         </div>
       </div>
-      <button class="aggregate-btn" onclick="executeAggregate()">
+      <button id="aggregateBtn" class="aggregate-btn" onclick="executeAggregate()">
         <svg viewBox="0 0 24 24">
           <path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"/>
           <path d="M21 3v5h-5"/>
